added privacy msg, added wecome screen

--- a/public/privacy.html
+++ b/public/privacy.html
@@ -11,9 +11,9 @@
   <![endif]-->
 
   <style>
-    body {font-family: Verdana, sans-serif; font-size:0.8em;}
+    body {font-family: Verdana, sans-serif; font-size:0.8em; background-color: #f6d3b7;}
     header,nav, section,article,footer
-    {border:1px solid grey; margin:5px; padding:8px;}
+    {border:1px solid #c56e2b; margin:5px; padding:8px;}
     nav ul {margin:0; padding:0;}
     nav ul li {display:inline; margin:5px;}
   </style>
